feat: header에 로고 넣기

--- a/src/public/login.html
+++ b/src/public/login.html
@@ -8,22 +8,32 @@
     <link rel="stylesheet" href="http://localhost:8000/css/login.css" type="text/css" />
 
     <title>[ 응답하라 추억시대 ] - 회원가입 / 로그인</title>
-    <style></style>
   </head>
   <body>
-    <div class="modal">
-      <div class="modalContent">
-        <div class="loginBox">
-          <div>
-            <label>로그인 이메일</label>
-            <input class="email" />
-          </div>
-          <div>
-            <label>비밀번호</label>
-            <input class="password" />
+    <header>
+      <img
+        class="logo"
+        src="http://localhost:8000/assets/image/logo.png"
+        onclick="location.href = `http://localhost:8000/index.html`"
+      />
+      <div class="headerBtns"></div>
+    </header>
+    <main>
+      <div class="modal">
+        <div class="modalContent">
+          <div class="loginBox">
+            <div>
+              <label>로그인 이메일</label>
+              <input class="email" />
+            </div>
+            <div>
+              <label>비밀번호</label>
+              <input class="password" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
