--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    안녕하세요
+    <header></header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
