--- a/src/public/login.html
+++ b/src/public/login.html
@@ -45,7 +45,7 @@
             <div>
               <label>이메일</label>
               <br />
-              <input class="email" type="text" />
+              <input class="signupEmail" type="text" />
               <button onclick="email()" class="verified">인증</button>
             </div>
             <div>
@@ -62,7 +62,7 @@
             <div>
               <label>비밀번호</label>
               <br />
-              <input class="password" type="text" />
+              <input class="signupPassword" type="text" />
             </div>
             <div>
               <label>확인 비밀번호</label>
