--- a/src/public/login.html
+++ b/src/public/login.html
@@ -76,6 +76,6 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>제작 - TEAM 1이3김 : 이다영 김주희 김민규 김지혜</footer>
   </body>
 </html>
