--- a/src/public/profile.html
+++ b/src/public/profile.html
@@ -10,7 +10,12 @@
   <body>
     <header>
       <img class="logo" src="./assets/image/logo.png" onclick="location.href = `./index.html`" />
-      <div class="headerBtns"></div>
+      <div class="headerBtns">
+        <button class="logout" style="display: none" onclick="logout()">로그아웃</button>
+        <button class="login" style="display: none" onclick="location.href=`./login`">
+          로그인
+        </button>
+      </div>
     </header>
     <main></main>
     <footer>제작 - TEAM 1이3김 : 이다영 김주희 김민규 김지혜</footer>
