--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,11 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <script src="./js/index.js"></script>
+    <link rel="stylesheet" href="./css/mainPage.css" type="text/css" />
+    <title>[ 응답하라 추억시대 ]</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header>
+      <img class="logo" src="./assets/image/logo.png" style="width: 200px; height: 200px" />
+    </header>
+
+    <main>
+      <div class="container">
+        <div class="postlist"></div>
+        <div class="pagination"></div>
+        <div class="annual_category_box">
+          <h4>annualCategory</h4>
+          <p>2020</p>
+          <p>2010</p>
+          <p>2000</p>
+          <p>1990</p>
+          <p>1980</p>
+          <p>1970</p>
+        </div>
+      </div>
+    </main>
+
     <footer></footer>
   </body>
 </html>
