fix : setInterval 시간 조정을 통한 반응 속도 개선

--- a/src/public/profile.html
+++ b/src/public/profile.html
@@ -17,7 +17,14 @@
         </button>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div>
+        <div class="profileSidebar">
+          <div class="nickname"></div>
+        </div>
+        <div></div>
+      </div>
+    </main>
     <footer>제작 - TEAM 1이3김 : 이다영 김주희 김민규 김지혜</footer>
   </body>
 </html>
