feat : 북마크 조회 프론트엔드

--- a/src/public/profile.html
+++ b/src/public/profile.html
@@ -20,8 +20,13 @@
     <main>
       <div>
         <div class="profileSidebar">
-          <div class="nickname"></div>
+          <div class="profile"></div>
+          <button class="editNickname">닉네임 수정</button>
+          <button class="editPassword">비밀번호 수정</button>
+          <button class="signout">회원 탈퇴</button>
+          <button class="admin">관리자 페이지</button>
         </div>
+        <div class="bookmarks"></div>
         <div></div>
       </div>
     </main>
