--- a/src/public/index.html
+++ b/src/public/index.html
@@ -15,17 +15,26 @@
     <main>
       <div class="container">
         <div class="post_pagination">
+          <div class="title">
+            <p>제목</p>
+            <p>닉네임</p>
+            <p>작성일</p>
+            <p>조회수</p>
+          </div>
           <div class="postlist"></div>
           <div class="pagination"></div>
         </div>
-        <div class="annual_category_box">
-          <h4>연도별 카테고리</h4>
-          <p onclick="annualCategory(2020)">2020</p>
-          <p onclick="annualCategory(2010)">2010</p>
-          <p onclick="annualCategory(2000)">2000</p>
-          <p onclick="annualCategory(1990)">1990</p>
-          <p onclick="annualCategory(1980)">1980</p>
-          <p onclick="annualCategory(1970)">1970</p>
+        <div>
+          <div class="annual_category_box">
+            <h4>연도별 카테고리</h4>
+            <p onclick="annualCategory(2020)">2020</p>
+            <p onclick="annualCategory(2010)">2010</p>
+            <p onclick="annualCategory(2000)">2000</p>
+            <p onclick="annualCategory(1990)">1990</p>
+            <p onclick="annualCategory(1980)">1980</p>
+            <p onclick="annualCategory(1970)">1970</p>
+          </div>
+          <button class="thread_btn" onclick="location.href = `./threads`">익명 스레드</button>
         </div>
       </div>
     </main>
