feat : 회원 탈퇴 시 게시글/댓글 soft delete, 프로필 페이지 프론트엔드

--- a/src/public/login.html
+++ b/src/public/login.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="./assets/image/logo.png" onclick="location.href = `./index.html`" />
+      <img class="logo" src="./assets/image/logo.png" onclick="location.href = `./`" />
       <div class="headerBtns"></div>
     </header>
     <main>
