--- a/src/public/annual.html
+++ b/src/public/annual.html
@@ -15,10 +15,21 @@
     <main>
       <div class="container">
         <div class="post_pagination">
-          <div class="postlist"></div>
+          <table>
+            <thead class="title_column">
+              <tr>
+                <th scope="col">카테고리</th>
+                <th scope="col">제목</th>
+                <th scope="col">닉네임</th>
+                <th scope="col">작성일</th>
+                <th scope="col">조회수</th>
+              </tr>
+            </thead>
+            <tbody class="postlist"></tbody>
+          </table>
           <div class="pagination"></div>
         </div>
-        <div>
+        <div class="box_button">
           <div class="annual_category_box">
             <h4>연도별 카테고리</h4>
             <p onclick="annualCategory(2020)">2020</p>
