fix: threads.html

--- a/src/public/threads.html
+++ b/src/public/threads.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/threads.css" type="text/css" />
-    <title>익명 스레드 페이지</title>
+    <title>[ 응답하라 추억시대 ] - 익명 스레드 페이지</title>
   </head>
   <body>
     <header>
@@ -13,6 +13,7 @@
       <h1>응답하라 추억시대</h1>
     </header>
 
+    <!-- 스레드 -->
     <div class="threadbox">
       <div class="flex-container">
         <div id="threadList"></div>
