feat: Add 글 작성 페이지

--- a/src/public/annual.html
+++ b/src/public/annual.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./js/annual.js"></script>
-    <link rel="stylesheet" href="./css/posts.css" type="text/css" />
+    <link rel="stylesheet" href="./css/postlist.css" type="text/css" />
     <title>[ 응답하라 추억시대 ]</title>
   </head>
   <body>
     <header>
       <img class="logo" src="./assets/image/logo.png" onclick="location.href = `./`" />
+      <button class="writing_btn" onclick="writingPost()">글 작성하기</button>
     </header>
 
     <main>
