--- a/src/public/login.html
+++ b/src/public/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./js/login.js"></script>
+    <script src="./js/code.js"></script>
     <link rel="stylesheet" href="./css/login.css" type="text/css" />
 
     <title>[ 응답하라 추억시대 ] - 회원가입 / 로그인</title>
