--- a/src/public/profile.html
+++ b/src/public/profile.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./js/code.js"></script>
     <script src="./js/profile.js"></script>
     <link rel="stylesheet" href="./css/profile.css" type="text/css" />
     <title>Document</title>
