fix : 반응형 디자인

--- a/src/public/login.html
+++ b/src/public/login.html
@@ -31,7 +31,7 @@
             <div>
               <label>비밀번호</label>
               <br />
-              <input class="password" type="text" />
+              <input class="password" type="password" />
             </div>
             <div class="loginBoxBtns">
               <button class="login" onclick="login()">로그인</button>
@@ -63,11 +63,11 @@
             <div>
               <label>비밀번호</label>
               <br />
-              <input class="signupPassword" type="text" />
+              <input class="signupPassword" type="password" placeholder="6자~12자 영문 숫자 조합" />
             </div>
             <div>
               <label>확인 비밀번호</label>
-              <input class="confirm" type="text" />
+              <input class="confirm" type="password" />
             </div>
             <div class="signupBoxBtns">
               <button class="login" onclick="signup()">회원가입</button>
