--- a/src/public/threads.html
+++ b/src/public/threads.html
@@ -18,7 +18,7 @@
     <!-- 스레드 -->
     <div class="threadbox">
       <div class="writeThreadBox">
-        <input class="writeThread" type="text" />
+        <input class="writeThread" type="text" placeholder="예쁜말 고운 말을 사용해 주세요!" />
         <button class="writeThreadBtn" onclick="writeThread()">작성</button>
       </div>
       <div id="threadList"></div>
