feat:상세 게시글 신고, 댓글 신고 댓글 작성, 댓글 수정, 댓글 삭제 기능 추가

--- a/src/public/detail.html
+++ b/src/public/detail.html
@@ -41,7 +41,7 @@
         placeholder="댓글을 작성하세요"
       />
       <button class="comment-submit-button" onclick="postComment()">작성</button>
-      <div class="comment-list">
+      <div class="comment-list" id="comment-list">
         <div class="comment-item">
           <div class="comment-content">
             <span class="comment-nickname">사용자1 :</span>
@@ -66,8 +66,6 @@
         </div>
       </div>
     </div>
-
-    <button class="post-delete-button">게시글 삭제 버튼</button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/detail.js"></script>
   </body>
