feat: 글 작성 페이지 css 추가
게시글 관련 에러 코드 정리

--- a/src/public/post.html
+++ b/src/public/post.html
@@ -4,34 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./js/post.js"></script>
+    <script src="./js/code.js"></script>
     <link rel="stylesheet" href="./css/post.css" type="text/css" />
+    <link rel="stylesheet" href="./css/headerButtons.css" type="text/css" />
     <title>[ 응답하라 추억시대 ] - 글 작성하기</title>
   </head>
   <body>
     <header>
       <img class="logo" src="./assets/image/logo.png" onclick="location.href = `./`" />
+      <div class="headerBtns">
+        <button class="logout" style="display: none" onclick="logout()">로그아웃</button>
+        <button class="mypage" style="display: none" onclick="location.href=`./profile`">
+          마이페이지
+        </button>
+        <button class="login" style="display: none" onclick="location.href=`./login`">
+          회원가입/로그인
+        </button>
+      </div>
     </header>
 
     <main>
-      <div>
-        <label>카테고리</label>
-        <select class="annualcategory">
-          <option selected></option>
-          <option>1970</option>
-          <option>1980</option>
-          <option>1990</option>
-          <option>2000</option>
-          <option>2010</option>
-          <option>2020</option>
-        </select>
-      </div>
-      <form class="writing_form">
-        <label>제목<input class="title" type="text" placeholder="제목을 입력해주세요." /></label>
-        <label>내용<input class="content" type="text" placeholder="내용을 입력해주세요." /></label>
-      </form>
-      <div class="post_buttons">
-        <button onclick="writingPost()">게시글 작성</button>
-        <button onclick="cancelPost()">취소</button>
+      <div class="container">
+        <div>
+          <label>카테고리</label>
+          <select class="annualcategory">
+            <option selected></option>
+            <option>1970</option>
+            <option>1980</option>
+            <option>1990</option>
+            <option>2000</option>
+            <option>2010</option>
+            <option>2020</option>
+          </select>
+        </div>
+        <div class="write_box">
+          <input class="post_title" type="text" placeholder="제목을 입력해주세요." />
+          <input class="post_img" type="text" placeholder="이미지 url을 입력해주세요." />
+          <textarea class="post_content" type="text" placeholder="내용을 입력해주세요."></textarea>
+        </div>
+        <div class="post_buttons">
+          <button onclick="writingPost()">게시글 작성</button>
+          <button onclick="cancelPost()">취소</button>
+        </div>
       </div>
     </main>
 
