fix:detail 버튼 기능 추가

--- a/src/public/detail.html
+++ b/src/public/detail.html
@@ -12,7 +12,7 @@
         class="logo"
         src="./assets/image/logo.png"
         alt="로고"
-        onclick="location.href = `./index.html`"
+        onclick="location.href = `./index`"
       />
     </header>
 
