--- a/src/public/admin.html
+++ b/src/public/admin.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="./js/admin.js"></script>
+
     <link rel="stylesheet" href="./css/admin.css" type="text/css" />
     <title>[ 응답하라 추억시대 ] - 관리자</title>
   </head>
@@ -41,5 +40,7 @@
         <button class="deleteButton" id="deleteButton">삭제</button>
       </div>
     </div>
+    <script src="./js/admin.js"></script>
+    <script src="./js/code.js"></script>
   </body>
 </html>
