--- a/src/public/profile.html
+++ b/src/public/profile.html
@@ -26,7 +26,9 @@
             비밀번호 수정
           </button>
           <button class="signout" onclick="modalOn('#signoutModal')">회원 탈퇴</button>
-          <button class="admin" onclick="location.href = `./admin`">관리자 페이지</button>
+          <button class="admin" onclick="location.href = `./admin`" style="display: none">
+            관리자 페이지
+          </button>
           <div class="modal" id="editNicknameModal" style="display: none">
             <div class="modalContent">
               <div class="nicknameBox">
@@ -48,12 +50,12 @@
                 <div>
                   <label>비밀번호</label>
                   <br />
-                  <input class="password" type="text" />
+                  <input class="password" type="password" />
                 </div>
                 <div>
                   <label>확인 비밀번호</label>
                   <br />
-                  <input class="confirm" type="text" placeholder="한번 더 입력하세요." />
+                  <input class="confirm" type="password" placeholder="한번 더 입력하세요." />
                 </div>
                 <div class="loginBoxBtns">
                   <button class="login" onclick="editPassword()">수정</button>
