--- a/src/public/admin.html
+++ b/src/public/admin.html
@@ -10,12 +10,7 @@
   <body>
     <header class="header">
       <div class="headerBtns"></div>
-      <img
-        class="logo"
-        src="./assets/image/logo.png"
-        alt="로고"
-        onclick="location.href = `./index.html`"
-      />
+      <img class="logo" src="./assets/image/logo.png" alt="로고" onclick="location.href = `./`" />
     </header>
     <div class="additionalBoxSet" id="reportBox">
       <div class="additionalBox">
