--- a/src/public/index.html
+++ b/src/public/index.html
@@ -21,7 +21,7 @@
           회원가입/로그인
         </button>
       </div>
-      <button class="writing_btn" onclick="writingPost()">글 작성하기</button>
+      <button class="write" style="display: none" onclick="writingPost()">글 작성하기</button>
     </header>
 
     <main>
