--- a/src/public/login.html
+++ b/src/public/login.html
@@ -17,7 +17,7 @@
       <div class="loginPageBtns">
         <button class="signupModalBtn" onclick="modalOn('#signupModal')">회원 가입</button>
         <button class="loginModalBtn" onclick="modalOn('#loginModal')">로그인</button>
-        <button class="kakaoBtn">카카오 로그인</button>
+        <img onclick="kakaoLogin()" src="./assets/image/kakao_login_large_narrow.png" />
       </div>
       <div class="modal" id="loginModal" style="display: none">
         <div class="modalContent">
@@ -78,6 +78,12 @@
     </main>
     <footer>제작 - TEAM 1이3김 : 이다영 김주희 김민규 김지혜</footer>
     <script src="./js/login.js"></script>
+    <script src="./js/kakao.js"></script>
     <script src="./js/code.js"></script>
+    <script
+      src="https://t1.kakaocdn.net/kakao_js_sdk/2.3.0/kakao.min.js"
+      integrity="sha384-70k0rrouSYPWJt7q9rSTKpiTfX6USlMYjZUtr1Du+9o4cGvhPAWxngdtVZDdErlh"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
