fix : 카카오 소셜 로그인 deploy.yml

--- a/src/public/login.html
+++ b/src/public/login.html
@@ -80,6 +80,7 @@
     <script src="./js/login.js"></script>
     <script src="./js/kakao.js"></script>
     <script src="./js/code.js"></script>
+    <script src="./js/config.js"></script>
     <script
       src="https://t1.kakaocdn.net/kakao_js_sdk/2.3.0/kakao.min.js"
       integrity="sha384-70k0rrouSYPWJt7q9rSTKpiTfX6USlMYjZUtr1Du+9o4cGvhPAWxngdtVZDdErlh"
