--- a/src/public/oauth.html
+++ b/src/public/oauth.html
@@ -10,5 +10,6 @@
     <h3>닉네임은 로그인 이후 마이페이지에서 수정할 수 있습니다.</h3>
     <button onclick="location.href=`../`">로그인 완료하고 홈으로 돌아가기</button>
     <script src="../js/oauth.js"></script>
+    <script src="../js/config.js"></script>
   </body>
 </html>
