fix : 비밀번호 정규식 수정

--- a/src/public/login.html
+++ b/src/public/login.html
@@ -62,7 +62,11 @@
             <div>
               <label>비밀번호</label>
               <br />
-              <input class="signupPassword" type="password" placeholder="6자~12자 영문 숫자 조합" />
+              <input
+                class="signupPassword"
+                type="password"
+                placeholder="6자~12자 영문 숫자 특수문자"
+              />
             </div>
             <div>
               <label>확인 비밀번호</label>
