--- a/src/public/oauth.html
+++ b/src/public/oauth.html
@@ -11,5 +11,6 @@
     <button onclick="location.href=`../`">로그인 완료하고 홈으로 돌아가기</button>
     <script src="../js/oauth.js"></script>
     <script src="../js/config.js"></script>
+    <script src="../js/code.js"></script>
   </body>
 </html>
