fix : 10분 이내 인증 placeholder

--- a/src/public/login.html
+++ b/src/public/login.html
@@ -51,7 +51,7 @@
             <div>
               <label>인증번호</label>
               <br />
-              <input class="receiveNumber" type="text" />
+              <input class="receiveNumber" type="text" placeholder="10분 이내로 입력하세요" />
               <button onclick="verified()" class="check">확인</button>
             </div>
             <div>
