feat:채팅방 기능 추가

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -52,6 +52,7 @@
             <p onclick="annualCategory(1970)">1970</p>
           </div>
           <button class="thread_btn" onclick="location.href = `./threads`">익명 스레드</button>
+          <button class="thread_btn" onclick="location.href = `./chat`">채팅방</button>
         </div>
       </div>
     </main>
