fix : 카카오 로그인 리디렉션 페이지 경로

--- a/src/public/oauth.html
+++ b/src/public/oauth.html
@@ -9,8 +9,8 @@
     <h3>최초로 카카오 로그인을 진행할 경우 랜덤 닉네임이 부여됩니다!</h3>
     <h3>닉네임은 로그인 이후 마이페이지에서 수정할 수 있습니다.</h3>
     <button onclick="location.href=`../`">로그인 완료하고 홈으로 돌아가기</button>
-    <script src="../js/oauth.js"></script>
-    <script src="../js/config.js"></script>
-    <script src="../js/code.js"></script>
+    <script src="./js/oauth.js"></script>
+    <script src="./js/config.js"></script>
+    <script src="./js/code.js"></script>
   </body>
 </html>
