fix: 게시글 수정시 이미지도 변경할 수 있도록 수정

--- a/src/public/post.html
+++ b/src/public/post.html
@@ -47,7 +47,7 @@
           </div>
           <div class="write_box">
             <input name="title" type="text" placeholder="제목을 입력해주세요." />
-            <input name="img" type="file" placeholder="이미지 url을 입력해주세요." />
+            <input name="img" type="file" />
             <textarea name="content" type="text" placeholder="내용을 입력해주세요."></textarea>
           </div>
           <div class="post_buttons">
