--- a/src/public/login.html
+++ b/src/public/login.html
@@ -25,7 +25,7 @@
             <div>
               <label>이메일</label>
               <br />
-              <input class="email" type="text" />
+              <input class="email" type="text" name="email" />
             </div>
             <div>
               <label>비밀번호</label>
