fix: 카카오 로그인 버튼 크기 수정

--- a/src/public/login.html
+++ b/src/public/login.html
@@ -17,7 +17,11 @@
       <div class="loginPageBtns">
         <button class="signupModalBtn" onclick="modalOn('#signupModal')">회원 가입</button>
         <button class="loginModalBtn" onclick="modalOn('#loginModal')">로그인</button>
-        <img onclick="kakaoLogin()" src="./assets/image/kakao_login_large_narrow.png" />
+        <img
+          class="kakaoLogin"
+          onclick="kakaoLogin()"
+          src="./assets/image/kakao_login_large_narrow.png"
+        />
       </div>
       <div class="modal" id="loginModal" style="display: none">
         <div class="modalContent">
