--- a/src/public/chat.html
+++ b/src/public/chat.html
@@ -15,7 +15,11 @@
       <div class="chat-header" id="chat-header"></div>
       <div class="chat-messages" id="chat-messages"></div>
       <div class="chat-input">
-        <input type="text" id="message-input" placeholder="Type your message" />
+        <input
+          type="text"
+          id="message-input"
+          placeholder="당신이 대화하고 있는 사람은 누군가의 금지옥엽입니다."
+        />
         <button id="send-button">Send</button>
       </div>
     </div>
