--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="./assets/image/logo.png" onclick="window.location.reload()" />
+      <img class="logo" src="./assets/image/logo.png" onclick="location.href = `./`" />
       <div class="headerBtns">
         <button class="logout" style="display: none" onclick="logout()">로그아웃</button>
         <button class="mypage" style="display: none" onclick="location.href=`./profile`">
