--- a/src/public/index.html
+++ b/src/public/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="box_button">
           <div class="annual_category_box">
-            <h4>연도별 카테고리</h4>
+            <p>연도별 카테고리</p>
             <p onclick="annualCategory(2020)">2020</p>
             <p onclick="annualCategory(2010)">2010</p>
             <p onclick="annualCategory(2000)">2000</p>
