--- a/src/public/profile.html
+++ b/src/public/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="./css/profile.css" type="text/css" />
-    <title>Document</title>
+    <title>[ 응답하라 추억시대 ] - 마이페이지</title>
   </head>
   <body>
     <header>
