--- a/src/public/index.html
+++ b/src/public/index.html
@@ -43,11 +43,11 @@
             <table>
               <thead>
                 <tr>
-                  <th scope="col">카테고리</th>
+                  <th scope="col">연도</th>
                   <th scope="col">제목</th>
                   <th scope="col">닉네임</th>
                   <th scope="col">작성일</th>
-                  <th scope="col">조회수</th>
+                  <th scope="col">Ꙭ̮</th>
                 </tr>
               </thead>
               <tbody class="postlist"></tbody>
