fix : 데이터 없을 시에도 글 목록  기본 골격 유지

--- a/src/public/post.html
+++ b/src/public/post.html
@@ -6,7 +6,6 @@
     <script src="./js/post.js"></script>
     <script src="./js/code.js"></script>
     <link rel="stylesheet" href="./css/post.css" type="text/css" />
-    <link rel="stylesheet" href="./css/headerButtons.css" type="text/css" />
     <title>[ 응답하라 추억시대 ] - 글 작성하기</title>
   </head>
   <body>
@@ -29,39 +28,49 @@
       </header>
 
       <main>
-        <form
-          action="./api/posts"
-          method="POST"
-          enctype="multipart/form-data"
-          onsubmit="return false"
-          id="form"
-        >
-          <input type="hidden" name="authorization" class="Authorization" />
-          <div class="container">
-            <div>
-              <label>카테고리</label>
-              <select name="annualCategory">
-                <option selected></option>
-                <option>1970</option>
-                <option>1980</option>
-                <option>1990</option>
-                <option>2000</option>
-                <option>2010</option>
-                <option>2020</option>
-              </select>
+        <container>
+          <form
+            action="./api/posts"
+            method="POST"
+            enctype="multipart/form-data"
+            onsubmit="return false"
+            id="form"
+          >
+            <input type="hidden" name="authorization" class="Authorization" />
+            <div class="container">
+              <div>
+                <label>카테고리</label>
+                <select name="annualCategory">
+                  <option selected></option>
+                  <option>1970</option>
+                  <option>1980</option>
+                  <option>1990</option>
+                  <option>2000</option>
+                  <option>2010</option>
+                  <option>2020</option>
+                </select>
+              </div>
+              <div class="write_box">
+                <input name="title" type="text" placeholder="제목을 입력해주세요." />
+                <input name="img" type="file" />
+                <textarea name="content" type="text" placeholder="내용을 입력해주세요."></textarea>
+              </div>
+              <div class="post_buttons">
+                <button onclick="writingPost()">게시글 작성</button>
+                <button onclick="cancelPost()">취소</button>
+              </div>
             </div>
-            <div class="write_box">
-              <input name="title" type="text" placeholder="제목을 입력해주세요." />
-              <input name="img" type="file" />
-              <textarea name="content" type="text" placeholder="내용을 입력해주세요."></textarea>
-            </div>
-            <div class="post_buttons">
-              <button onclick="writingPost()">게시글 작성</button>
-              <button onclick="cancelPost()">취소</button>
-            </div>
-          </div>
-        </form>
+          </form>
+        </container>
       </main>
+      <div class="chatbox">
+        <button class="chat_btn" onclick="location.href = `./chat`" style="display: none">
+          채팅
+        </button>
+        <button class="thread_btn" onclick="location.href = `./threads`" style="display: none">
+          익명
+        </button>
+      </div>
     </article>
     <footer>제작 - TEAM 1이3김 : 이다영 김주희 김민규 김지혜</footer>
   </body>
