--- a/src/public/annual.html
+++ b/src/public/annual.html
@@ -32,6 +32,7 @@
             <li onclick="annualCategory(1990)">1990</li>
             <li onclick="annualCategory(1980)">1980</li>
             <li onclick="annualCategory(1970)">1970</li>
+            <li class="ordering" onclick="location.href ='./'">메인</li>
           </ul>
         </div>
       </header>
