--- a/src/public/index.html
+++ b/src/public/index.html
@@ -25,6 +25,7 @@
             </button>
             <button class="write" style="display: none" onclick="writingPost()">글 작성하기</button>
           </div>
+
           <ul class="navCon">
             <li onclick="annualCategory(2020)">2020</li>
             <li onclick="annualCategory(2010)">2010</li>
@@ -32,6 +33,8 @@
             <li onclick="annualCategory(1990)">1990</li>
             <li onclick="annualCategory(1980)">1980</li>
             <li onclick="annualCategory(1970)">1970</li>
+            <li class="ordering" onclick="loadPosts()">최신순</li>
+            <li class="ordering" onclick="loadPostsByViewCountOrder()">조회순</li>
           </ul>
         </div>
       </header>
@@ -49,8 +52,11 @@
                   <th scope="col">Ꙭ̮</th>
                 </tr>
               </thead>
+
               <tbody class="postlist"></tbody>
             </table>
+            <div class="pagination_createdat"></div>
+            <div class="pagination_viewcount"></div>
             <div class="pagination"></div>
           </div>
         </div>
