--- a/src/public/index.html
+++ b/src/public/index.html
@@ -33,8 +33,8 @@
             <li onclick="annualCategory(1990)">1990</li>
             <li onclick="annualCategory(1980)">1980</li>
             <li onclick="annualCategory(1970)">1970</li>
-            <li class="ordering" onclick="loadPosts()">최신순</li>
-            <li class="ordering" onclick="loadPostsByViewCountOrder()">조회순</li>
+            <li onclick="loadPosts()">최신순</li>
+            <li onclick="loadPostsByViewCountOrder()">조회순</li>
           </ul>
         </div>
       </header>
