--- a/src/public/index.html
+++ b/src/public/index.html
@@ -13,7 +13,7 @@
       <header>
         <div class="navControl">
           <div class="logoCon">
-            <img class="logo" src="./assets/image/logo.png" onclick="location.href = `./`" />
+            <img class="logo" src="./assets/image/logo.png" onclick="clickLogo()" />
           </div>
           <div class="headerBtns">
             <button class="logout" style="display: none" onclick="logout()">로그아웃</button>
@@ -52,12 +52,10 @@
                   <th scope="col">Ꙭ̮</th>
                 </tr>
               </thead>
-
               <tbody class="postlist"></tbody>
             </table>
             <div class="pagination_createdat"></div>
             <div class="pagination_viewcount"></div>
-            <div class="pagination"></div>
           </div>
         </div>
       </main>
