fix : 최신순 조회순 조회 수정

--- a/src/public/annual.html
+++ b/src/public/annual.html
@@ -32,8 +32,8 @@
             <li onclick="annualCategory(1990)">1990</li>
             <li onclick="annualCategory(1980)">1980</li>
             <li onclick="annualCategory(1970)">1970</li>
-            <li onclick="annualPosts()">최신순</li>
-            <li onclick="annualPostsByViewCountOrder()">조회순</li>
+            <li onclick="annualPosts()">연도별 최신순</li>
+            <li onclick="annualPostsByViewCountOrder()">연도별 조회순</li>
           </ul>
         </div>
       </header>
