fix : 채팅방 열 때 다른 창으로

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -61,9 +61,7 @@
       </main>
 
       <div class="chatbox">
-        <button class="chat_btn" onclick="location.href = `./chat`" style="display: none">
-          채팅
-        </button>
+        <button class="chat_btn" onclick="window.open(`./chat`)" style="display: none">채팅</button>
         <button class="thread_btn" onclick="location.href = `./threads`" style="display: none">
           익명
         </button>
