--- a/src/public/threads.html
+++ b/src/public/threads.html
@@ -6,6 +6,7 @@
     <script src="./js/threads.js"></script>
     <script src="./js/code.js"></script>
     <link rel="stylesheet" href="./css/threads.css" type="text/css" />
+    <script src="./jsx/threads.jsx"></script>
     <title>[ 응답하라 추억시대 ]</title>
   </head>
   <body>
