feat : React Render
리액트 파일 gate port에서 정상적으로 렌더 및 작동하게 만듬

--- a/src/public/html/test.html
+++ b/src/public/html/test.html
@@ -5,6 +5,7 @@
     <title>Getting Started</title>
   </head>
   <body>
+    <div id="root"></div>
     <script src="./jsx/test.js"></script>
   </body>
 </html>
