fix : annualCategory > category

--- a/src/public/main.html
+++ b/src/public/main.html
@@ -27,12 +27,12 @@
           </div>
 
           <ul class="navCon">
-            <li onclick="annualCategory(2020)">2020</li>
-            <li onclick="annualCategory(2010)">2010</li>
-            <li onclick="annualCategory(2000)">2000</li>
-            <li onclick="annualCategory(1990)">1990</li>
-            <li onclick="annualCategory(1980)">1980</li>
-            <li onclick="annualCategory(1970)">1970</li>
+            <li onclick="category(2020)">2020</li>
+            <li onclick="category(2010)">2010</li>
+            <li onclick="category(2000)">2000</li>
+            <li onclick="category(1990)">1990</li>
+            <li onclick="category(1980)">1980</li>
+            <li onclick="category(1970)">1970</li>
             <li onclick="loadPosts()">전체 최신순</li>
             <li onclick="loadPostsByViewCountOrder()">전체 조회순</li>
           </ul>
