--- a/src/public/post.html
+++ b/src/public/post.html
@@ -40,7 +40,7 @@
             <div class="container">
               <div>
                 <label>카테고리</label>
-                <select name="annualCategory">
+                <select name="category">
                   <option selected></option>
                   <option>1970</option>
                   <option>1980</option>
