--- a/src/public/annual.html
+++ b/src/public/annual.html
@@ -26,12 +26,12 @@
             <button class="write" style="display: none" onclick="writingPost()">글 작성하기</button>
           </div>
           <ul class="navCon">
-            <li onclick="annualCategory(2020)">2020</li>
-            <li onclick="annualCategory(2010)">2010</li>
-            <li onclick="annualCategory(2000)">2000</li>
-            <li onclick="annualCategory(1990)">1990</li>
-            <li onclick="annualCategory(1980)">1980</li>
-            <li onclick="annualCategory(1970)">1970</li>
+            <li onclick="category(2020)">2020</li>
+            <li onclick="category(2010)">2010</li>
+            <li onclick="category(2000)">2000</li>
+            <li onclick="category(1990)">1990</li>
+            <li onclick="category(1980)">1980</li>
+            <li onclick="category(1970)">1970</li>
           </ul>
         </div>
       </header>
